// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <div
    className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-18 MuiAvatar-colorDefault-19"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-21"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </g>
      </svg>
    </div>
    <div
      className="MuiListItemText-root-27"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 MuiListItemText-primary-30"
      >
        undefined
      </h3>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42 MuiTypography-colorTextSecondary-55 MuiListItemText-secondary-31"
      >
        undefined, undefined, undefined
      </p>
    </div>
    <span
      className="MuiTouchRipple-root-57"
    />
  </div>
  <div
    className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-18 MuiAvatar-colorDefault-19"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-21"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </g>
      </svg>
    </div>
    <div
      className="MuiListItemText-root-27"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 MuiListItemText-primary-30"
      >
        undefined
      </h3>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42 MuiTypography-colorTextSecondary-55 MuiListItemText-secondary-31"
      >
        undefined, undefined, undefined
      </p>
    </div>
    <span
      className="MuiTouchRipple-root-57"
    />
  </div>
</ul>
`;

exports[`when address type is "manufacture" renders correctly 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <div
    className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-18 MuiAvatar-colorDefault-19"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-21"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
          />
        </g>
      </svg>
    </div>
    <div
      className="MuiListItemText-root-27"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 MuiListItemText-primary-30"
      >
        undefined
      </h3>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42 MuiTypography-colorTextSecondary-55 MuiListItemText-secondary-31"
      >
        undefined, undefined, undefined
      </p>
    </div>
    <span
      className="MuiTouchRipple-root-57"
    />
  </div>
  <div
    className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-18 MuiAvatar-colorDefault-19"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-21"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </g>
      </svg>
    </div>
    <div
      className="MuiListItemText-root-27"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 MuiListItemText-primary-30"
      >
        undefined
      </h3>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42 MuiTypography-colorTextSecondary-55 MuiListItemText-secondary-31"
      >
        undefined, undefined, undefined
      </p>
    </div>
    <span
      className="MuiTouchRipple-root-57"
    />
  </div>
</ul>
`;

exports[`with zip code renders correctly 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <div
    className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-18 MuiAvatar-colorDefault-19"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-21"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </g>
      </svg>
    </div>
    <div
      className="MuiListItemText-root-27"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 MuiListItemText-primary-30"
      >
        undefined - foo-code
      </h3>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42 MuiTypography-colorTextSecondary-55 MuiListItemText-secondary-31"
      >
        undefined, undefined, undefined
      </p>
    </div>
    <span
      className="MuiTouchRipple-root-57"
    />
  </div>
  <div
    className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-18 MuiAvatar-colorDefault-19"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-21"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </g>
      </svg>
    </div>
    <div
      className="MuiListItemText-root-27"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 MuiListItemText-primary-30"
      >
        undefined
      </h3>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42 MuiTypography-colorTextSecondary-55 MuiListItemText-secondary-31"
      >
        undefined, undefined, undefined
      </p>
    </div>
    <span
      className="MuiTouchRipple-root-57"
    />
  </div>
</ul>
`;

exports[`without list renders correctly 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
/>
`;
